# MagicSquare_12

./: .coverage  .cursorrules  .gitignore  README.md  pyproject.toml
.cursor/rules/: magicsquare-cpp-code-style.mdc  magicsquare-ecb-architecture.mdc  magicsquare-forbidden.mdc  magicsquare-project.mdc  magicsquare-tdd-testing.mdc
Prompt/: MagicSquare_C++_커서룰_개발보고서.md  MagicSquare_개발보고서.md
Report/: MagicSquare_C++_커서룰_개발보고서.md  MagicSquare_개발보고서.md
entity/: __init__.py  exceptions.py  user.py
tests/: conftest.py
tests/entity/: test_user.py
